--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ name = "dfdiagnoser"
 version = "0.0.1"
 description = "Data Flow Diagnoser"
 readme = "README.md"
+license = "MIT"
 requires-python = ">=3.9"
 dependencies = [
     "hydra-core~=1.3.0",
